[package]
authors = ["Helsing GmbH"]
description = "Helsing's Rust bindings for sqlite3's lsm1 extension in stand-alone fashion."
name = "lsmlite-rs"
build = "build.rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
keywords = ["lsm", "storage-engine", "embedded", "persistence"]
repository = "https://github.com/helsing-ai/lsmlite-rs"
rust-version = "1.64"

[dependencies]
libz-sys = { version = "1.1.8", default-features = false, features = ["libc"] }
lz4-sys = "1.9.4"
prometheus = "0.13.3"
serde = { version = "1.0.157", features = ["derive"] }
tracing = { version = "0.1.37", features = ["log"] }
zstd-sys = "2.0.7+zstd.1.5.4"

[dev-dependencies]
chrono = "0.4.24"
md5 = "0.7.0"
nix = "0.26.2"
prost = "0.11.8"
rand = "0.8.5"
rand_mt = "4.2.1"
tracing-subscriber = { version = "0.3.16", features = ["std", "env-filter"] }

[build-dependencies]
cc = "1.0.79"

[profile.dev]
incremental = false
